added some test programs

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,11 +9,10 @@ lthread.o: $(src)
 
 install: lthread.o
 	cp liblthread.so* /usr/lib/
-	cp liblthread.a /usr/lib/
 	cp lthread.h /usr/include/
 
 test: lthread.o
-	gcc -g rbtree.o time.o poller.o lthread_sched.o lthread.o lthread_unit_test.c -o test_lthread
+	gcc -lpthread -g rbtree.o time.o poller.o lthread_sched.o lthread.o lthread_unit_test.c -o test_lthread
 
 compute_test: lthread.o
 	gcc -lpthread -g rbtree.o time.o poller.o lthread_sched.o lthread.o lthread_compute.o lthread_unit_test_compute.c -o test_lthread
