--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(CMAKE_BUILD_TYPE release)
 SET (CMAKE_C_FLAGS_RELEASE "-Werror -g -Wall")
 
 set (lthread_files src/lthread.c src/lthread_socket.c
-                    src/lthread_sched.c src/rbtree.c
+                    src/lthread_sched.c
                     src/time_utils.c src/poller.c)
 add_library(lthread  src/lthread_compute.c ${lthread_files})
 set_property(SOURCE ${lthread_files} PROPERTY COMPILE_FLAGS "-O2")
