flush kevent events when full instead of growing the array & rename files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ SET (CMAKE_C_FLAGS_RELEASE "-Werror -g -Wall")
 
 set (lthread_files src/lthread.c src/lthread_socket.c
                     src/lthread_sched.c
-                    src/time_utils.c src/poller.c)
+                    src/lthread_time.c src/lthread_poller.c)
 add_library(lthread  src/lthread_compute.c ${lthread_files})
 set_property(SOURCE ${lthread_files} PROPERTY COMPILE_FLAGS "-O2")
 
