--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,13 @@ install (FILES src/lthread.h DESTINATION include)
 
 set(UNIT_TEST_PATH ${CMAKE_SOURCE_DIR}/tests)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${UNIT_TEST_PATH})
-add_executable(lthread_basic tests/lthread_basic.c)
-target_link_libraries(lthread_basic lthread pthread)
+
+add_executable(lthread_sleep tests/lthread_sleep.c)
+target_link_libraries(lthread_sleep lthread pthread)
+
+add_executable(lthread_join tests/lthread_join.c)
+target_link_libraries(lthread_join lthread pthread)
 
 enable_testing()
-add_test(lthread_basic ${UNIT_TEST_PATH}/lthread_basic)
+add_test(lthread_sleep ${UNIT_TEST_PATH}/lthread_sleep)
+add_test(lthread_join ${UNIT_TEST_PATH}/lthread_join)
